--- a/cart.css
+++ b/cart.css
@@ -1,410 +1,316 @@
-* {
-    margin: 0;
-    padding: 0;
+*{
+  margin: 0;
+  padding: 0;
 }
 
 :root {
-    --dark: rgb(34, 34, 34); 
+    --dark: rgb(20, 20, 20); 
     --light: rgb(244, 235, 208);
     --p1: rgb(241, 227, 164);
     --p2: rgb(231, 205, 120);
     --gold: rgb(222, 182, 75);
     --font: 'Montserrat', sans-serif;
+    --max-width: 95vw;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 html {
   font-family: var(--font);
+  scroll-behavior: smooth;
+  background-color: rgb(231, 231, 231);
+  overflow-x: hidden;
 }
 
 #all-content {
-  min-width: 1356px;
-  max-width: 1356px;
+  max-width: 95vw;
+  overflow: hidden;
   margin: auto;
+}
+
+#all-content section {
+  margin: 12vh 0;
 }
 
 /*scroll bar start*/
 
 ::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background: var(--gold);
+  width: 5px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--p1);
-  border-radius: 10px;
+  background: rgb(53, 53, 53);
 }
 
 /*scroll bar end*/
+
+
 /*Hearder and Navigation bar */
 
 #nav-bar {
-    width: 100%;
-    height: 60px;
-    background-color: var(--gold);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.466);
-    z-index: 1;
+  width: 96%;
+  padding: 0 2%;
+  height: 60px;
+  background-color: var(--p1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  z-index: 10;
 }
 
-.logo {
-    color: var(--dark);
-    margin-left: 30px;
-    transition: 0.3s ease;
-}
-
-#logo {
+#logo,
+#options,
+#ic_options {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 60px;
 }
 
-#options{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+#nav-bar h1,
+#anime i,
+#nav-bar a,
+#logo i{
+  color: var(--dark);
+  text-decoration: none;
+  margin: 0 5px;
+  font-size: 1rem;
+  transition: 0.3s ease;
 }
 
-h1 a, .cart {
-    text-decoration: none;
-    color: var(--dark);
-    margin-right: 25px;
-    transition: 0.3s ease;
-    font-size: 1rem;
+#logo i {
+  font-size: 2.5rem;
 }
 
-h1 a:hover,
-.cart:hover,
-.logo:hover {
-    color: var(--light);
+#logo h1 {
+  font-size: 1.5rem;
 }
 
-.search {
-    height: 30px;
-    border-radius: 30px;
-    border: none;
-    background-color: var(--p1);
-    padding: 0 10px;
-    outline: none;
-    transition: 0.3s ease;
+#options h1:hover,
+#logo:hover i,
+#anime i:hover,
+#logo:hover h1 {
+  color: white;
 }
 
-.search:hover {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.466);
-  background-color: var(--light);
+#ic_options {
+  width: 25%;
+  display: flex;
+  justify-content: right;
 }
+
+.logo {
+  width: 20%;
+  display: flex;
+  align-items: left;
+}
+
+.search_icon_con {
+  width: 15px;
+  
+  padding: 5px;
+  aspect-ratio: 1;
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: none;
+  justify-content: center;
+  border-radius: 0 5px 5px 0;
+  transition: 0.5s ease-out;
+}
+
+#search_icon {
+  position: absolute;
+  transition: 0.5s ease-out;
+  transform: none;
+  z-index: 0;
+  cursor: pointer;
+}
+
+#cross_icon {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  transform: rotate(-135deg);
+  transition: 0.5s ease-out;
+  cursor: pointer;
+}
+
+#nav_search_id {
+  height: 15px;
+  opacity: 0;
+  width: 0;
+  border: none;
+  outline: none;
+  padding: 5px;
+  border-radius: 5px 0 0 5px;
+  transition: 0.5s ease-out;
+}
+
+/*Nav Bar Ends Here*/
 /*spacer*/
 
 #spacer {
-    width: 100%;
-    height: 80px;
+  width: 100%;
+  height: 60px;
 }
 
 /*cart start*/
 
-.page {
-  width: 90%;
-  margin: auto;
+
+
+
+
+/*Footer*/
+
+footer {
+  width: 98%;
+  padding: 1%;
+  background-color: var(--p1);
+}
+
+/*newlater*/
+
+#newslater {
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  color: white;
+  background-image: url(images/bodybg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px;
   display: flex;
+  align-items: center;
   justify-content: space-evenly;
 }
 
-#cart-product-list {
-  background-color: var(--gold);
-  width: 65%;
-  border-radius: 20px;
-  overflow: hidden;
-  margin-bottom: 5%;
-
-}
-
-.heading {
-  width: 98%;
-  height: 50px;
-  border-radius: 20px;
-  margin: auto;
-  display: flex;
-  font-size: 1rem;
-  overflow: hidden;
-  color: var(--dark);
-  align-items: center;
-  justify-content: center;
-}
-
-.font-size {
-  font-size: 1rem;
-}
-
-#cart-list {
-  background-color: var(--p2);
-  border-radius: 20px;
-  margin: 0 1%;
-  color: var(--dark);
-}
-
-.cart-product {
-  width: 98%;
-  height: 140px;
-  border-radius: 20px;
-  margin: auto;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 2px rgba(0, 0, 0, 0.384) solid;
-  
-  margin-bottom: 2%;
-}
-
-.cart-product-m {
-  width: 64%;
-  height: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.img-con {
+#heading-news {
+  width: 40%;
   height: 100%;
-  overflow: hidden;
-  aspect-ratio: 1;
-  background-color: white;
-  border-radius: 20px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: space-evenly;
 }
 
-.img-con img {
-  height: 90%;
-  aspect-ratio: 1;
+#heading-news img {
+  height: 60%;
+  margin-right: 3%;
 }
 
-.text-con {
-  font-size: 1rem;
-  width: 70%;
+#heading-news h1 {
+  font-size: 3rem;
+}
+
+.form_con {
+  width: 46%;
+  height: 70%;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(255, 255, 255, 0.171);
+  transition: 0.3s ease;
+}
+
+#newslater:hover .form_con {
+  background-color: rgba(255, 255, 255, 0.281);
+}
+
+#Footer-form {
+  width: 80%;
+  height: 95%;
+  display: grid;
+  grid-template-columns: 1fr;
   margin: auto;
-  height: 100%;
+  gap: 0.8%;
+}
+
+#Footer-form label {
+  font-size: 1.2rem;
+}
+
+#Footer-form label[for="email"],
+#Footer-form label[for="contact"] {
+  margin-top: 1%;
+}
+
+#Footer-form input {
+  font-size: 1rem;
+  padding: 0.8%;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+}
+
+#Footer-form input[type="submit"] {
+  width: 60%;
+  margin: 1% auto;
+}
+
+/*Footer*/
+
+#footer {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 5%;
+  margin-top: 2%;
+}
+
+#footer a {
+  text-decoration: none;
+}
+
+.col {
   display: flex;
   flex-direction: column;
-  background-color: var(--p1);
-  border-radius: 20px;
 }
 
-.text-con h2 {
-  height: 50%;
-  margin-top: 6px;
-  font-size: 0.8rem;
-  margin-left: 10px;
-  font-weight: 500;
-}
-
-.text-con h3 {
-  margin-top: 10px;
-  font-size: 1rem;
-  margin-left: 10px;
-  height: 10%;
-}
-
-.fla-size-con {
+#footer-logo-div {
   display: flex;
-}
-
-.fla-size-con h2 {
-  margin: auto;
-  font-size: 1rem;
-}
-
-.qty_price_con {
-  width: 34%;
-  height: 90%;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  font-size: 1rem;
+  justify-content: space-evenly;
+  color: black;
 }
 
-.qty_price_con h1 {
-  margin: auto;
-
-}
-
-.separate-line {
+.col .footer-logo {
   width: 100%;
+  padding: 2% 0;
 }
 
-.price-t {
-  width: 5%;
+.col #footer-logo-div h1 {
+  font-size: 3rem;
 }
 
-.price-k {
-  width: 20%;
-}
-
-
-.final-calculation-c {
-  width: 25%;
-  padding: 0.3%;
-  height: fit-content;
-  border-radius: 20px;
-  background-color: var(--gold);
-  margin-bottom: 5%;
-  position: sticky;
-  top: 85px;
-}
-
-.final-calculation {
-  margin: 3%;
-  padding: 3%;
-  border-radius: 20px;
-  font-size: 1.6rem;
-  background-color: var(--p2);
-  color: rgba(82, 82, 82, 0.678);
-  font-weight: 600;
-}
-
-.content {
-  width: 100%;
-  display: flex;
+.col h4 {
+  font-size: 1.2rem;
   margin-bottom: 1%;
-  justify-content: space-between;
+}
+
+.col p,
+.col a{
+  margin-bottom: 0.5%;
+  color: black;
+}
+
+.col a:hover {
+  color: white;
+}
+
+.follow {
   margin-top: 5%;
 }
 
-.content h2 {
-  margin-top: 3%;
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--dark);
-}
-
-.separator {
-  height: 2px;
-  width: 80%;
+footer .copy {
   margin: auto;
-  margin-top: 30px;
-  background-color: var(--dark);
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 0.5%;
 }
-
-.total h2 {
-  font-size: 1.6rem;
-}
-
-.check-out,
-#check-out {
-  font-size: 1.6rem;
-  width: 100%;
-  border-radius: 10px;
-  border: none;
-  color: var(--light);
-  outline: none;
-  background-color: var(--gold);
-  transition: 0.5s ease-out;
-  box-shadow: none;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
-
-.check-out:hover,
-#check-out:hover {
-  background-color: var(--dark);
-  color: var(--light);
-  box-shadow: 0px 0px 30px rgb(255, 255, 255);
-}
-
-.coupon-c {
-  width: 100%;
-  height: 30px;
-  margin-top: 8%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#coupon-input {
-  width: 54%;
-  height: 100%;
-  margin-right: 10px; 
-  border-radius: 10px;
-  border: none;
-  padding: 0 3%;
-  outline: none;
-  background-color: white;
-  font-size: 1rem;
-}
-
-.coupon {
-  width: 40%;
-}
-
-
-
-/*footer start*/
-
-#footer-logo {
-    margin-bottom: 30px;
-  }
-  
-  #footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    color: var(--dark);
-    background-color: var(--gold);
-    padding: 30px;
-    border-radius: 15px;
-    width: 90%;
-    margin: auto;
-    margin-bottom: 30px;
-    height: 400px;
-  }
-  
-  #footer .col {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 20px;
-  }
-  
-  #footer h4 {
-    font-size: 1.6rem;
-    padding-bottom: 20px;
-  }
-  
-  #footer p, a {
-    font-size: 1rem;
-    text-decoration: none;
-    margin-bottom: 10px;
-  }
-  
-  #footer .follow {
-    margin-top: 20px;
-  }
-  
-  #footer .follow i, a,
-  #apps {
-    color: var(--dark);
-    padding-right: 4px;
-    cursor: pointer;
-    transition: 0.3s ease;
-  }
-  
-  #footer .follow i:hover,
-  #footer a:hover,
-  #apps:hover {
-  color: var(--light);
-  }
-  
-  #footer .copy {
-    width: 100%;
-    text-align: center;
-  }
-  
-  /*footer end*/
