--- a/product.css
+++ b/product.css
@@ -268,10 +268,6 @@ html {
   margin-right: 2px;
 }
 
-.golden {
-  background-color: var(--p2);
-}
-
 /*Pricing and Discounts*/
 
 .left_half_div {
@@ -523,6 +519,308 @@ html {
   margin: auto;
 }
 
+/*Bottom Section Start*/
+
+#pr_description {
+  width: 98%;
+  background-color: rgba(255, 255, 255, 0.493);
+  border-radius: 10px;
+  margin: auto;
+}
+
+.Product_det_btm_div {
+  width: 96%;
+  margin: 0 auto;
+  margin-top: 40px;
+  padding: 1%;
+  border-radius: 10px;
+  background-color: white;
+}
+
+#Des_H_con {
+  display: flex;
+  justify-content: start;
+}
+
+#Des_H_con h2 {
+  padding: 1%;
+}
+
+.Des_H_Con_Active {
+  background-color: white;
+  border-radius: 10px 10px 0 0;
+}
+
+#Description_Con {
+  background-color: white;
+  border-radius: 0 10px 10px 10px;
+  padding: 1%;
+}
+
+.Add_Info_heading {
+  margin-bottom: 1%;
+}
+
+/*Additional Info*/
+
+.addi_info_con {
+  display: flex;
+  justify-content: space-between;
+}
+
+/*Reviews*/
+
+#rew_summary_con {
+  height: 100px;
+  display: flex;
+  width: max-content;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#total_rew_sum_con {
+  text-align: center;
+}
+
+#total_rew_sum {
+  font-size: 4rem;
+}
+
+.rew_divider {
+  width: 4px;
+  height: 100%;
+  background-color: rgb(180, 180, 180);
+  margin: 0 40px;
+}
+
+.star_count_con {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.star_con {
+  display: flex;
+}
+
+.rew_star {
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  width: 45px;
+  aspect-ratio: 1;
+  background-color: grey;
+}
+
+.ind_rew {
+  width: 100%;
+  height: max-content;
+  border-top: 2px solid rgb(180, 180, 180);
+  padding-top: 0.5%;
+  margin-top: 1%;
+}
+
+.ind_rew_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cust_name_img {
+  display: flex;
+  align-items: center;
+}
+
+.cust_name_img .img {
+  width: 40px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-right: 20px;
+}
+
+.rate_date {
+  text-align: center  ;
+}
+
+.ind_star_con {
+  width: max-content;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 2px;
+}
+
+.ind_star {
+  clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  width: 20px;
+  aspect-ratio: 1;
+  background-color: grey;
+}
+
+.ind_rew_con_H_B {
+  width: 90%;
+  background-color: rgb(240, 240, 240);
+  padding: 1%;
+  border-radius: 10px;
+  margin: auto;
+  margin-top: 1%  ;
+}
+
+/*Related Product*/
+
+#Rel_pr_con_H {
+  text-align: center;
+  width: 96%;
+  margin: 0 auto;
+  margin-top: 40px;
+  border-radius: 10px;
+  background-color: white;
+}
+
+.product-list {
+  width: 98%;
+  margin: 0 auto;
+  overflow: hidden;
+  display: grid;
+  padding: 1% 0;
+  overflow-wrap: normal;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+@media screen and (max-width: 1815px) {
+  .product-list {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .product-list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.product {
+  background-color: rgb(245, 245, 245);
+  border-radius: 10px;
+  padding: 5px;
+  height: 478px;
+  position: relative;
+  box-shadow: none;
+  margin-top: 20px;
+  transform: scale(1);
+  transition: 0.3s ease;
+}
+
+.product:hover {
+  background-color: white;
+  transform: scale(1.009);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.452);
+}
+
+.product_wish {
+  position: absolute;
+  right: -30px;
+  top: 10px;
+  transition: 0.3s ease;
+}
+
+.product:hover .product_wish {
+  right: 10px;
+  top: 10px;
+}
+
+.product .product_image_con {
+  width: 100%;
+  height: 350px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border: 1px solid white;
+  margin: auto;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  transition: 0.3s ease;
+}
+
+.product:hover .product_image_con {
+  border: solid 1px var(--p1);
+}
+
+.dis_text {
+  position: absolute;
+  background-color: var(--p1);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  top: -30px;
+  left: -30px;
+  color: red;
+}
+
+.dis_text h3 {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.dis_text p {
+  position: absolute;
+  top: 60px;
+  left: 38px;
+}
+
+.product .product_image_con img {
+  width: 300px;
+  height: 300px;
+}
+
+.product_data {
+  width: 100%;
+}
+
+.Brand_c {
+  font-size: 0.8rem;
+  color: var(--gold);
+}
+
+.product_title {
+  font-size: 0.8rem;
+  margin: 10px 0;
+}
+
+.price_rating {
+  display: flex;
+  justify-content: space-between;
+  margin: 5px;
+}
+
+.pricing {
+  text-align: center;
+}
+
+.pricing .mrp {
+  font-size: 0.8rem;
+  text-decoration: line-through;
+}
+
+.pricing .selling_p {
+  font-size: 1rem;
+
+}
+
+.rating_stars {
+  display: flex;
+  height: 20px;
+  margin: auto;
+}
+
+.golden {
+  background-color: var(--p2);
+}
 /*Footer*/
 
 footer {
